Remove unnecesary constants

--- a/src/stylesheets/constants.styl
+++ b/src/stylesheets/constants.styl
@@ -1,22 +1,15 @@
 @import "CSSmethods/vendor.styl"
 
 /* CONSTANTS */
-HEADER_FOOTER_HEIGHT          = 44px
-HEADER_GROUPBAR_HEIGHT        = 30px
+HEADER_HEIGHT          = 44px
 
-ARTICLE_BOTTOM                = (HEADER_FOOTER_HEIGHT - 1)
-ARTICLE_WITH_HEADER_EXTENDED  = (HEADER_FOOTER_HEIGHT + HEADER_GROUPBAR_HEIGHT)
+ASIDE_WIDTH            = 264px
+ASIDE_WIDTH_SMALL      = 64px
+ASIDE_SMALL_ICON       = 48px
 
-ASIDE_WIDTH                    = 264px
-ASIDE_WIDTH_SMALL              = 64px
-ASIDE_SMALL_ICON               = 48px
+DEFAULT_TRANSITION     = easeOutSine
+TRANSITION_TIME        = 350ms
 
-BORDER_RADIUS                  = 2px
-
-DEFAULT_TRANSITION             = easeOutSine
-
-FONT_SIZE_TINY                 = 11px
-FONT_SIZE_SMALL                = 0.9em
-FONT_SIZE_BIG                  = 1.2em
-
-TRANSITION_TIME                = 350ms
+FONT_SIZE_TINY         = 11px
+FONT_SIZE_SMALL        = 0.9em
+FONT_SIZE_BIG          = 1.2em
