--- a/src/stylesheets/lungo.widgets.notification.styl
+++ b/src/stylesheets/lungo.widgets.notification.styl
@@ -56,7 +56,7 @@ WINDOW_WIDTH = 280px
       width: WINDOW_WIDTH
       left: 0
       top: 0
-      margin: (HEADER_FOOTER_HEIGHT / 2) auto 0
+      margin: (HEADER_HEIGHT / 2) auto 0
 
       transform(translateY(100%))
       &.show
