--- a/src/stylesheets/lungo.widgets.pull.styl
+++ b/src/stylesheets/lungo.widgets.pull.styl
@@ -12,7 +12,7 @@
 section.show > [data-control="pull"]
   position: absolute
   z-index: -1
-  top: HEADER_FOOTER_HEIGHT
+  top: HEADER_HEIGHT
   width: 100%
   height: 80px
   padding: 10px 0
