Refactor in aside handler

--- a/src/stylesheets/lungo.layout.aside.styl
+++ b/src/stylesheets/lungo.layout.aside.styl
@@ -13,9 +13,13 @@ aside
   width: ASIDE_WIDTH
   display: none
   z-index: -1
+
+  &.active
+    display-box()
+
   &.show
     z-index: 0
-    display-box()
+
 
   &.right
     right: 0px
