--- a/src/stylesheets/lungo.media.tablet.styl
+++ b/src/stylesheets/lungo.media.tablet.styl
@@ -11,9 +11,11 @@
     overflow: hidden
 
   section
+    ordinal-group(2)
     box-flex(1)
     &:not(.show)
       display: none !important
+
 
   [data-router=aside]
     display: none !important
