BETA for router screen

--- a/src/stylesheets/lungo.layout.aside.styl
+++ b/src/stylesheets/lungo.layout.aside.styl
@@ -10,7 +10,7 @@
 @import "constants.styl"
 
 aside
-  width: ASIDE_WIDTH
+  min-width: ASIDE_WIDTH
   display: none
   z-index: -1
 
@@ -19,7 +19,6 @@ aside
 
   &.show
     z-index: 0
-
 
   &.right
     right: 0px
