--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -9,7 +9,7 @@
 
 /* @import url("https://raw.github.com/soyjavi/CSSmethods/master/stylus/vendor.styl") */
 @import "CSSmethods/vendor.styl"
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
+// @import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
 
 
 /* -------------------------- THEME -------------------------- */
