Deprecated data-router ... welcome data-view-*

--- a/src/stylesheets/lungo.media.tablet.styl
+++ b/src/stylesheets/lungo.media.tablet.styl
@@ -38,7 +38,7 @@
     &[data-children]
       width: 25%
 
-    & [data-router=aside]
+    & [data-view-aside]
       display: none !important
 
 @-webkit-keyframes showing
