--- a/src/stylesheets/lungo.widgets.button.styl
+++ b/src/stylesheets/lungo.widgets.button.styl
@@ -33,7 +33,8 @@
 
   &.anchor
     display: block
-    width: inherit
+    // width: inherit
+    width: 100%
     position: relative
     & .icon
       position: absolute
