--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -102,6 +102,9 @@ size = 5px
     text-align: center
   &.align_justify
     text-align: justify
+
+  &.tiny
+    font-size: 0.8em
   &.small
     font-size: FONT_SIZE_SMALL
   &.big
