--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -138,6 +138,9 @@ nav
       box-shadow: inset 4px 0px 0px COLOR_accept
     &.cancel
       box-shadow: inset 4px 0px 0px COLOR_cancel
+    &.arrow::after
+      border-color: COLOR_secondary
+
     &, & a
       color: LIST_color
       &.anchor
